--- a/docs/Tutorials/Components/Front/PostproductionRenderer.mdx
+++ b/docs/Tutorials/Components/Front/PostproductionRenderer.mdx
@@ -139,6 +139,19 @@ const wallsIds = walls.IFCWALL;
 const [wall1, wall2] = wallsIds;
 outliner.addItems({ [model.modelId]: new Set([wall1, wall2]) });
 ```
+### 📹 Switching the camera
+---
+If you are using an orthoperspective camera, you need to update the postproduction renderer camera:
+
+```js
+// To update the camera
+
+// window.addEventListener("dblclick", () => {
+//   world.camera.projection.toggle();
+//   model.useCamera(world.camera.three);
+//   world.renderer.postproduction.updateCamera();
+// });
+```
 ### ⏱️ Measuring the performance (optional)
 ---
 We'll use the [Stats.js](https://github.com/mrdoob/stats.js) to measure the performance of our app. We will add it to the top left corner of the viewport. This way, we'll make sure that the memory consumption and the FPS of our app are under control.
@@ -151,14 +164,6 @@ stats.dom.style.left = "0px";
 stats.dom.style.zIndex = "unset";
 world.renderer.onBeforeUpdate.add(() => stats.begin());
 world.renderer.onAfterUpdate.add(() => stats.end());
-
-// To update the camera
-
-// window.addEventListener("dblclick", () => {
-//   world.camera.projection.toggle();
-//   model.useCamera(world.camera.three);
-//   world.renderer.postproduction.updateCamera();
-// });
 ```
 ### 🧩 Adding some UI
 ---
