--- a/docs/Tutorials/Fragments/Fragments/FragmentsModels/Materials.mdx
+++ b/docs/Tutorials/Fragments/Fragments/FragmentsModels/Materials.mdx
@@ -129,7 +129,7 @@ We'll identify different material types (like steel and concrete) based on their
 fragments.models.materials.list.onItemSet.add(
   ({ key: id, value: material }) => {
     if ("map" in material) {
-      // Steel material; we can also use material.localId to identify the material
+      // Steel material; we can also use material.userData.localId to identify the material
       if (
         material.color.r === 1 &&
         material.color.g === 0 &&
